# ocaml_monorepo

./: .gitignore  CLAUDE.md  Makefile
.zed/: tasks.json
aoc2025/: .gitignore  aoc2025.opam  dune-project
aoc2025/lib/: day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  day_09.ml  day_10.ml  day_10.py  day_11.ml  day_12.ml  dune  prelude.ml  utils.ml
diagnostic/: README.md  dune-project
diagnostic/lib/: diagnostic.ml  diagnostic_file_span.ml  diagnostic_line_col.ml  diagnostic_position_converter.ml  diagnostic_position_converter.mli  diagnostic_snippet.ml  diagnostic_snippet.mli  diagnostic_span.ml  diagnostic_spanned.ml  dune  error_message4.txt  error_messages.txt  error_messages2.txt  error_messages3.txt  idea.md
functional/: dune-project
functional/lib/: dune  functional.ml  functional_fold.ml  functional_fold.mli  functional_iter.ml  functional_iter.mli  functional_traverse.ml  functional_traverse.mli
location/: .ocamlformat  dune-project  location.opam
location/lib/: dune  location.ml  location_line_col.ml  location_pos.ml  location_position_converter.ml  location_position_converter.mli  location_span.ml  location_spanned.ml
oak/: dune-project  oak.opam  syntax
oak/lib/: dune  notes.md  oak.ml  oak_abstract.ml  oak_common.ml  oak_context.ml  oak_core.ml  oak_diagnostic.ml  oak_diagnostic.mli  oak_elaborate.ml  oak_elaborate.mli  oak_elaborate_tests.ml  oak_evaluate.ml  syntax  (+22 more)
oak_new/: dune-project  syntax
parsec/: dune-project
sexp_lang/: .gitignore  dune-project  sexp_lang.opam
shrubbery/: .gitignore  README.md  dune-project  shrubbery.opam
staged/: .ocamlformat  dune-project  staged.opam
staged/lib/: dune  staged.ml  staged_evaluate.ml  staged_infer.ml  staged_parse.ml  staged_syntax.ml  staged_tests.ml  staged_var.ml
utility/: dune-project  utility.opam
(+76 files in other folders)
