(lang dune 3.20)

(name diagnostic)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name diagnostic)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  (ocaml
   (= 5.4.0))
  (core
   (= v0.17.1))
  (ppx_jane
   (= v0.17.0))
  utility
 )
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
