opam-version: "2.0"
name: "location"
version: "0.1.0"
synopsis: "Location tracking utilities for source code"
maintainer: ["Brian"]
authors: ["Brian"]
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "ocaml"
  "dune" {>= "3.0"}
  "core"
  "ppx_jane"
  "ppx_inline_test"
]